
[TestScripts/Hello_World - 1]
 Hello, World 

---

[TestScripts/Data_Types - 1]
 2 
 this is a string 
 true 
 false 

---

[TestScripts/Arithmetic_Types - 1]
 3 
 17 
 1 
 14 

---

[TestScripts/Booleans - 1]
 true 
 false 
 true 
 false 
 false 
 true 
 false 
 false 
 false 
 true 
 true 
 true 
 false 
 true 
 true 
 false 

---
